<resources>
    <string name="ALongTimeAgo">last seen a long time ago</string>
    <string name="AbortPassword">Abort two-step verification setup</string>
    <string name="AccessError">Access error</string>
    <string name="AccountSettings">Account Settings</string>
    <string name="AccurateTo">Accurate to %1$s</string>
    <string name="ActionAddUser">un1 added un2</string>
    <string name="ActionAddUserSelf">un1 returned to the group</string>
    <string name="ActionAddUserSelfMega">un1 joined the group</string>
    <string name="ActionAddUserSelfYou">You returned to the group</string>
    <string name="ActionAddUserYou">un1 added you</string>
    <string name="ActionChangedPhoto">un1 changed the group photo</string>
    <string name="ActionChangedTitle">un1 changed the group name to un2</string>
    <string name="ActionChannelChangedPhoto">Channel photo changed</string>
    <string name="ActionChannelChangedTitle">Channel name changed to un2</string>
    <string name="ActionChannelRemovedPhoto">Channel photo removed</string>
    <string name="ActionCreateChannel">Channel created</string>
    <string name="ActionCreateGroup">un1 created the group</string>
    <string name="ActionCreateMega">Group created</string>
    <string name="ActionInviteUser">un1 joined the group via invite link</string>
    <string name="ActionInviteYou">You joined the group via invite link</string>
    <string name="ActionKickUser">un1 removed un2</string>
    <string name="ActionKickUserYou">un1 removed you</string>
    <string name="ActionLeftUser">un1 left the group</string>
    <string name="ActionMigrateFromGroup">This group was upgraded to a supergroup</string>
    <string name="ActionMigrateFromGroupNotify">%1$s was upgraded to a supergroup</string>
    <string name="ActionPinnedContact">un1 pinned a contact</string>
    <string name="ActionPinnedFile">un1 pinned a file</string>
    <string name="ActionPinnedGame">un1 pinned %1$s</string>
    <string name="ActionPinnedGeo">un1 pinned a map</string>
    <string name="ActionPinnedGeoLive">un1 pinned a live location</string>
    <string name="ActionPinnedGif">un1 pinned a GIF</string>
    <string name="ActionPinnedMusic">un1 pinned a track</string>
    <string name="ActionPinnedNoText">un1 pinned a message</string>
    <string name="ActionPinnedPhoto">un1 pinned a photo</string>
    <string name="ActionPinnedRound">un1 pinned a video message</string>
    <string name="ActionPinnedSticker">un1 pinned a sticker</string>
    <string name="ActionPinnedText">un1 pinned \"%1$s\"</string>
    <string name="ActionPinnedVideo">un1 pinned a video</string>
    <string name="ActionPinnedVoice">un1 pinned a voice message</string>
    <string name="ActionRemovedPhoto">un1 removed the group photo</string>
    <string name="ActionTakeScreenshoot">un1 took a screenshot!</string>
    <string name="ActionTakeScreenshootYou">You took a screenshot!</string>
    <string name="ActionUserScored">un1 scored %1$s</string>
    <string name="ActionUserScoredInGame">un1 scored %1$s in un2</string>
    <string name="ActionYouAddUser">You added un2</string>
    <string name="ActionYouChangedPhoto">You changed the group photo</string>
    <string name="ActionYouChangedTitle">You changed the group name to un2</string>
    <string name="ActionYouCreateGroup">You created the group</string>
    <string name="ActionYouKickUser">You removed un2</string>
    <string name="ActionYouLeftUser">You left the group</string>
    <string name="ActionYouRemovedPhoto">You removed the group photo</string>
    <string name="ActionYouScored">You scored %1$s</string>
    <string name="ActionYouScoredInGame">You scored %1$s in un2</string>
    <string name="Add">Add</string>
    <string name="AddAdminErrorBlacklisted">Sorry, you can\'t add this user as an admin because they are in the blacklist and you can\'t unban them.</string>
    <string name="AddAdminErrorNotAMember">Sorry, you can\'t add this user as an admin because they are not a member of this group and you are not allowed to invite them.</string>
    <string name="AddBannedErrorAdmin">Sorry, you can\'t ban this user because they are an admin in this group and you are not allowed to demote them.</string>
    <string name="AddCaption">Add a caption...</string>
    <string name="AddContact">Add</string>
    <string name="AddContactChat">ADD CONTACT</string>
    <string name="AddContactTitle">Add contact</string>
    <string name="AddExceptions">Add exceptions</string>
    <string name="AddMasks">Add Masks</string>
    <string name="AddMasksInstalled">New masks added</string>
    <string name="AddMember">Add member</string>
    <string name="AddMutual">Add contacts to your channel</string>
    <string name="AddRecipient">Add recipient</string>
    <string name="AddShortcut">Add shortcut</string>
    <string name="AddStickers">Add Stickers</string>
    <string name="AddStickersInstalled">New stickers added</string>
    <string name="AddStickersNotFound">Stickers not found</string>
    <string name="AddSubscriber">Add subscriber</string>
    <string name="AddToContacts">Add to contacts</string>
    <string name="AddToFavorites">Add to Favorites</string>
    <string name="AddToMasks">Add to Masks</string>
    <string name="AddToStickers">Add to Stickers</string>
    <string name="AddToTheGroup">Add %1$s to the group?</string>
    <string name="AddToTheGroupForwardCount">Number of last messages to forward:</string>
    <string name="AddToTheGroupTitle">Add %1$s to the chat %2$s?</string>
    <string name="AddedToFavorites">Sticker was added to Favorites</string>
    <string name="Alert">Alert</string>
    <string name="AllMedia">All media</string>
    <string name="AllPhotos">All photos</string>
    <string name="AllowFillNumber">Please allow %1$s to receive calls and SMS so that we can fill in your phone number, send you a code, and enter it for you.</string>
    <string name="AllowReadCall">Please allow %1$s to receive calls so that we can automatically enter your code for you.</string>
    <string name="AllowReadCallAndSms">Please allow %1$s to receive calls and SMS so that we can automatically enter your code for you.</string>
    <string name="AllowReadSms">Please allow %1$s to receive SMS so that we can automatically enter your code for you.</string>
    <string name="AlwaysAllow">Always Allow</string>
    <string name="AlwaysAllowPlaceholder">Always allow...</string>
    <string name="AlwaysShareWith">Always Share With</string>
    <string name="AlwaysShareWithPlaceholder">Always share with users...</string>
    <string name="AlwaysShareWithTitle">Always Share</string>
    <string name="AlwaysShowPopup">Always show popup</string>
    <string name="AndMoreTypingGroup_few">%1$s and %2$d more are typing</string>
    <string name="AndMoreTypingGroup_many">%1$s and %2$d more are typing</string>
    <string name="AndMoreTypingGroup_one">%1$s and %2$d more are typing</string>
    <string name="AndMoreTypingGroup_other">%1$s and %2$d more are typing</string>
    <string name="AndMoreTypingGroup_two">%1$s and %2$d more are typing</string>
    <string name="AndMoreTypingGroup_zero">%1$s and %2$d more are typing</string>
    <string name="AndMoreTyping_few">and %1$d more are typing</string>
    <string name="AndMoreTyping_many">and %1$d more are typing</string>
    <string name="AndMoreTyping_one">and %1$d more are typing</string>
    <string name="AndMoreTyping_other">and %1$d more are typing</string>
    <string name="AndMoreTyping_two">and %1$d more are typing</string>
    <string name="AndMoreTyping_zero">and %1$d more are typing</string>
    <string name="AndOther_few">and %1$d others</string>
    <string name="AndOther_many">and %1$d others</string>
    <string name="AndOther_one">and %1$d other</string>
    <string name="AndOther_other">and %1$d others</string>
    <string name="AndOther_two">and %1$d others</string>
    <string name="AndOther_zero">and %1$d others</string>
    <string name="AppNameBeta">SUPERGRAM BETA</string>
    <string name="ApplyLocalizationFile">Apply localization file</string>
    <string name="ApplyTheme">APPLY</string>
    <string name="ApplyThemeFile">Apply theme file</string>
    <string name="AppsgeyserId">1</string>
    <string name="ArchivedMasks">Archived Masks</string>
    <string name="ArchivedMasksAlertInfo">Some of your older masks sets have been archived. You can reactivate them in the Masks Settings.</string>
    <string name="ArchivedMasksAlertTitle">Archived masks</string>
    <string name="ArchivedMasksEmpty">No archived masks</string>
    <string name="ArchivedMasksInfo">You can have up to 200 mask sets installed. Unused masks are archived when you install new sets.</string>
    <string name="ArchivedStickers">Archived Stickers</string>
    <string name="ArchivedStickersAlertInfo">Some of your older sticker sets have been archived. You can reactivate them in the Stickers Settings.</string>
    <string name="ArchivedStickersAlertTitle">Archived stickers</string>
    <string name="ArchivedStickersEmpty">No archived stickers</string>
    <string name="ArchivedStickersInfo">You can have up to 200 sticker sets installed. Unused stickers are archived when you install new sets.</string>
    <string name="AreTyping">are typing...</string>
    <string name="AreTypingGroup">%1$s are typing...</string>
    <string name="AreYouSure">Are you sure?</string>
    <string name="AreYouSureBlockContact">Are you sure you want to block this contact?</string>
    <string name="AreYouSureClearHistory">Are you sure you want to clear history?</string>
    <string name="AreYouSureClearHistoryChannel">Delete all cached text and media from this channel?</string>
    <string name="AreYouSureClearHistoryGroup">Delete all cached text and media from this group?</string>
    <string name="AreYouSureDeleteAndExit">Are you sure you want to delete and leave the group?</string>
    <string name="AreYouSureDeleteContact">Are you sure you want to delete this contact?</string>
    <string name="AreYouSureDeleteMessages">Are you sure you want to delete %1$s?</string>
    <string name="AreYouSureDeletePhoto">Are you sure you want to delete this photo?</string>
    <string name="AreYouSureDeleteThisChat">Are you sure you want to delete this chat?</string>
    <string name="AreYouSureDeleteVideo">Are you sure you want to delete this video?</string>
    <string name="AreYouSureLogout">Are you sure you want to log out?\n\nNote that you can seamlessly use %1$s on all your devices at once.\n\nRemember, logging out kills all your Secret Chats.</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="hockeyapp_feedback_attachment_button_text">Add Attachment</string>
    <string name="hockeyapp_feedback_email_hint">Email</string>
    <string name="hockeyapp_feedback_last_updated_text">Last Updated: %s</string>
    <string name="hockeyapp_feedback_message_hint">Message</string>
    <string name="hockeyapp_feedback_name_hint">Name</string>
    <string name="hockeyapp_feedback_refresh_button_text">Refresh</string>
    <string name="hockeyapp_feedback_response_button_text">Add a Response</string>
    <string name="hockeyapp_feedback_send_button_text">Send Feedback</string>
    <string name="hockeyapp_feedback_subject_hint">Subject</string>
    <string name="hockeyapp_login_email_hint">Email</string>
    <string name="hockeyapp_login_headline_text">Please enter your HockeyApp account\'s email address and password to authorize access to this app.</string>
    <string name="hockeyapp_login_login_button_text">Login</string>
    <string name="hockeyapp_login_password_hint">Password</string>
</resources>