<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" n1:background="@color/hockeyapp_background_white" n1:layout_width="match_parent" n1:layout_height="match_parent">
    <LinearLayout n1:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end" n1:orientation="vertical" n1:padding="20dp" n1:layout_width="match_parent" n1:layout_height="wrap_content">
        <TextView n1:textSize="18sp" n1:typeface="normal" n1:textColor="@color/hockeyapp_text_normal" n1:id="@id/text_headline" n1:padding="20dp" n1:layout_width="match_parent" n1:layout_height="wrap_content" n1:layout_marginBottom="30dp" n1:text="@string/hockeyapp_login_headline_text" />
        <EditText n1:textSize="15sp" n1:typeface="normal" n1:textColor="@color/hockeyapp_text_normal" n1:textColorHint="@color/hockeyapp_text_light" n1:id="@id/input_email" n1:padding="20dp" n1:layout_width="match_parent" n1:layout_height="wrap_content" n1:layout_marginBottom="30dp" n1:hint="@string/hockeyapp_login_email_hint" n1:inputType="text|textCapCharacters|textCapWords|textCapSentences|textAutoCorrect|textAutoComplete|textMultiLine|textImeMultiLine|textNoSuggestions|textUri|textEmailAddress|textEmailSubject|textShortMessage|textLongMessage|textPersonName|textPostalAddress|textPassword|textVisiblePassword|textWebEditText|textFilter|textPhonetic|textWebEmailAddress|textWebPassword|phone|time" n1:imeOptions="actionNone|actionSearch|actionSend|actionNext|actionDone|actionPrevious" />
        <EditText n1:textSize="15sp" n1:typeface="normal" n1:textColor="@color/hockeyapp_text_normal" n1:textColorHint="@color/hockeyapp_text_light" n1:id="@id/input_password" n1:padding="20dp" n1:layout_width="match_parent" n1:layout_height="wrap_content" n1:layout_marginBottom="30dp" n1:hint="@string/hockeyapp_login_password_hint" n1:inputType="text|textCapCharacters|textCapWords|textCapSentences|textAutoCorrect|textAutoComplete|textMultiLine|textImeMultiLine|textNoSuggestions|textUri|textEmailAddress|textEmailSubject|textShortMessage|textLongMessage|textPersonName|textPostalAddress|textPassword|textVisiblePassword|textWebEditText|textFilter|textPhonetic|textWebEmailAddress|textWebPassword|phone" n1:imeOptions="actionNone|actionSearch|actionSend|actionNext|actionDone|actionPrevious" />
        <Button n1:textSize="15sp" n1:textColor="@color/hockeyapp_text_white" n1:id="@id/button_login" n1:background="@drawable/hockeyapp_btn_background" n1:padding="20dp" n1:layout_width="match_parent" n1:layout_height="wrap_content" n1:layout_marginBottom="30dp" n1:text="@string/hockeyapp_login_login_button_text" />
    </LinearLayout>
</ScrollView>
