<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" n1:orientation="horizontal" n1:id="@id/search_bar" n1:layout_width="match_parent" n1:layout_height="match_parent">
    <TextView n1:textAppearance="?unknown_attr_ref: 1010041" n1:textColor="?unknown_attr_ref: 1010036" n1:gravity="top|bottom|center_vertical|fill_vertical|center|fill" n1:id="@id/search_badge" n1:visibility="gone" n1:layout_width="wrap_content" n1:layout_height="match_parent" n1:layout_marginBottom="2dp" n1:drawablePadding="0dp" />
    <ImageView n1:layout_gravity="top|bottom|center_vertical|fill_vertical|center|fill" n1:id="@id/search_button" n1:focusable="true" n1:layout_width="wrap_content" n1:layout_height="match_parent" n1:contentDescription="@string/abc_searchview_description_search" style="?attr/actionButtonStyle" />
    <LinearLayout n1:orientation="horizontal" n1:id="@id/search_edit_frame" n1:layout_width="wrap_content" n1:layout_height="match_parent" n1:layout_marginLeft="8dp" n1:layout_marginRight="8dp" n1:layout_weight="1.0">
        <ImageView n1:layout_gravity="top|bottom|center_vertical|fill_vertical|center|fill" n1:id="@id/search_mag_icon" n1:visibility="gone" n1:layout_width="UNKNOWN_DATA_0x7f070028" n1:layout_height="wrap_content" n1:scaleType="centerInside" style="@style/RtlOverlay.Widget.AppCompat.SearchView.MagIcon" />
        <LinearLayout n1:layout_gravity="top|bottom|center_vertical|fill_vertical|center|fill" n1:orientation="horizontal" n1:id="@id/search_plate" n1:layout_width="wrap_content" n1:layout_height="match_parent" n1:layout_weight="1.0">
            <view n1:ellipsize="end" n1:layout_gravity="top|bottom|center_vertical|fill_vertical|center|fill" n1:id="@id/search_src_text" n1:background="0x0" n1:paddingLeft="@dimen/abc_dropdownitem_text_padding_left" n1:paddingRight="@dimen/abc_dropdownitem_text_padding_right" n1:layout_width="UNKNOWN_DATA_0x1" n1:layout_height="UNKNOWN_DATA_0x2401" n1:singleLine="true" n1:layout_weight="1.0" n1:inputType="text|textCapCharacters|textCapWords|textCapSentences|textAutoCorrect|textAutoComplete|textMultiLine|textImeMultiLine|textNoSuggestions|textUri|textEmailAddress|textEmailSubject|textShortMessage|textLongMessage|textPersonName|textPostalAddress|textPassword|textVisiblePassword|textWebEditText|textFilter|textPhonetic|textWebEmailAddress|textWebPassword|phone" n1:dropDownAnchor="@id/search_edit_frame" n1:imeOptions="actionNone|actionGo|actionSearch|actionNext|actionDone|actionPrevious" n1:dropDownHeight="wrap_content" n1:dropDownHorizontalOffset="0dp" n1:dropDownVerticalOffset="0dp" class="android.support.v7.widget.SearchView$SearchAutoComplete" />
            <ImageView n1:layout_gravity="top|bottom|center_vertical|fill_vertical|center|fill" n1:id="@id/search_close_btn" n1:background="?attr/selectableItemBackgroundBorderless" n1:paddingLeft="8dp" n1:paddingRight="8dp" n1:focusable="true" n1:layout_width="wrap_content" n1:layout_height="match_parent" n1:contentDescription="@string/abc_searchview_description_clear" />
        </LinearLayout>
        <LinearLayout n1:orientation="horizontal" n1:id="@id/submit_area" n1:layout_width="wrap_content" n1:layout_height="match_parent">
            <ImageView n1:layout_gravity="top|bottom|center_vertical|fill_vertical|center|fill" n1:id="@id/search_go_btn" n1:background="?attr/selectableItemBackgroundBorderless" n1:paddingLeft="16dp" n1:paddingRight="16dp" n1:focusable="true" n1:visibility="gone" n1:layout_width="wrap_content" n1:layout_height="match_parent" n1:contentDescription="@string/abc_searchview_description_submit" />
            <ImageView n1:layout_gravity="top|bottom|center_vertical|fill_vertical|center|fill" n1:id="@id/search_voice_btn" n1:background="?attr/selectableItemBackgroundBorderless" n1:paddingLeft="16dp" n1:paddingRight="16dp" n1:focusable="true" n1:visibility="gone" n1:layout_width="wrap_content" n1:layout_height="match_parent" n1:contentDescription="@string/abc_searchview_description_voice" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
